<resources>
    <string name="app_name">PersonasMaterial</string>
    <string name="action_settings">Settings</string>
    <string name="agregarPersonas">AGREGAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="mensaje_error_vacio">Digite la informacion faltante</string>
    <string name="mensaje_persona_guardada">Persona Guardada Exitosamente!</string>
    <string name="mensaje_Seleccion_imagen">seleccione la imagen</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificarPersona">MODIFICAR</string>
    <string name="mensaje_error_cedula_existente">Cedula Existente</string>
    <string name="mensaje_persona_modificada_exitosamente">Persona Modificada</string>
    <string name="mensaje_ventana_eliminar">Desea eliminar Esta persona</string>
    <string name="opcion_positivo">Si</string>
    <string name="opcion_negativo">No</string>


</resources>
