<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.personasmaterial.ModificarPersona"
    android:weightSum="1">

    <TextView
        android:id="@+id/MODIFICAR"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:text="@string/modificarPersona"
        android:textAlignment="center"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/fotoModificar"
        android:layout_width="204dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:onClick="seleccionar_foto"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtCedulaModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cedula"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtNombreModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/txtApellidoModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnModificar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1.00"
            android:onClick="modificar"
            android:text="@string/modificar" />

        <Button
            android:id="@+id/btnEliminar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_weight="0.97"
            android:onClick="eliminar"
            android:text="@string/eliminar" />

    </LinearLayout>

</LinearLayout>
